# smart-pdf-reader

./: .gitignore  main.py  pyproject.toml
routes/: pdf_routes.py
src/smart_pdf_reader/: ai_agent.py  main.py  state_manager.py
